[package]
name = "jito-container-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
