[package]
name = "jito-container-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "3.0.5"
solana-commitment-config = "3.0.0"
solana-transaction-status = "3.0.5"
solana-pubkey = "3.0.0"
solana-signature = "3.0.0"
tokio = { version = "1", features = ["full"] }
