[package]
name = "meta-merkle-tree"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
fast-math = { workspace = true }
hex = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-sdk = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-sdk = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
spl-associated-token-account = { workspace = true }
spl-math = { workspace = true }
spl-token = { workspace = true }
thiserror = { workspace = true }
