[package]
name = "jito-tip-distribution-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "jito-tip-distribution-cli"
path = "src/bin/main.rs"

[dependencies]
anchor-lang = { workspace = true }
anyhow = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true }
jito-tip-distribution = { package = "jito-tip-distribution", git = "https://github.com/jito-foundation/jito-programs.git", features = ["no-entrypoint"] }
jito-tip-distribution-sdk = { package = "jito-tip-distribution-sdk", git = "https://github.com/jito-foundation/jito-programs.git" }
solana-client = "2.2"
solana-sdk = "2.2"
